Fixed css/formatting for the visibility icon, the lock icon, and the input field for each layer.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -82,3 +82,19 @@ html,body{
     padding: 10px;
 }
 
+.liItems{
+ padding-left: 5px;
+}
+
+.liInputTag{
+    width: auto ;
+}
+
+.typeIcon{
+    padding: 5px;
+}
+
+.liTag{
+    text-align: center;
+}
+
